--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,7 +43,7 @@ a {
 }
 
 body {
-  margin: auto;
+  margin: 10px;
   font-family: "Georgia", serif;
   font-size: 17px;
   color: black;
@@ -51,4 +51,117 @@ body {
 
 .main-content {
   display: flex;
+  padding-top: 100px;
+  border: 3px solid black;
+  justify-content: space-around;
+}
+
+.column-large {
+width: 630px;
+border: 3px solid black;
+margin-right: 10px;
+padding: 10px;
+justify-content: center;
+
+}
+
+.article1 {
+border: 2px solid black;
+margin: 5px;
+}
+
+.article1-img {
+  border: 1px solid black;
+  margin: 5px;
+  background-image: url("./images/img-story-main.png");
+  font-family: Georgia;
+font-weight: bold;
+font-size: 30px;
+color: white;
+}
+
+.article1-txt {
+
+}
+
+.narrative {
+  font-family: Georgia;
+  font-size: 17px;
+  color: black;
+}
+
+.stories {
+  border: 2px solid black;
+  margin: 5px;
+}
+
+.story {
+border: 1px solid black;
+margin: 5px;
+}
+
+.earth-img {
+border: 1px solid black;
+margin: 5px;
+background-image: url("./images/img-story-2.png");
+font-family: Georgia;
+font-weight: bold;
+font-size: 30px;
+color: white;
+}
+
+.cameras-img {
+  border: 1px solid black;
+  margin: 5px;
+  background-image: url("./images/img-story-3.png");
+  font-family: Georgia;
+font-weight: bold;
+font-size: 30px;
+color: white;
+}
+
+.column-medium {
+width: 300px;
+border: 3px solid black;
+margin-right: 10px;
+padding: 10px;
+}
+
+.cats-img {
+  border: 1px solid black;
+  margin: 5px;
+  background-image: url("./images/img-story-1.png");
+  font-family: Georgia;
+font-weight: bold;
+font-size: 30px;
+color: white;
+}
+
+.column-small {
+width: 240px;
+border: 3px solid black;
+padding: 10px;
+}
+
+.cookie-img {
+  border: 1px solid black;
+  width: 240px;
+
+}
+
+.cookie {
+
+}
+
+.news-bites {
+  border: 2px solid black;
+  margin: 5px;
+}
+
+.bite {
+
+}
+
+.info {
+
 }
