--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,26 @@
+body {
+  margin: 0;
+  font-family: "Georgia", serif;
+  font-size: 17px;
+  color: black;
+}
+
+a {
+  color: black;
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
 .logo {
   display: flex;
   align-items: center;
@@ -47,18 +70,19 @@ body {
   font-family: "Georgia", serif;
   font-size: 17px;
   color: black;
+
 }
 
 .main-content {
   display: flex;
   padding-top: 100px;
-  border: 3px solid black;
+
   justify-content: space-around;
 }
 
 .column-large {
 width: 630px;
-border: 3px solid black;
+
 margin-right: 10px;
 padding: 10px;
 justify-content: center;
@@ -66,12 +90,12 @@ justify-content: center;
 }
 
 .article1 {
-border: 2px solid black;
+
 margin: 5px;
 }
 
 .article1-img {
-  border: 1px solid black;
+
   margin: 5px;
   background-image: url("./images/img-story-main.png");
   font-family: Georgia;
@@ -91,17 +115,19 @@ color: white;
 }
 
 .stories {
-  border: 2px solid black;
+
   margin: 5px;
+  display: flex;
 }
 
 .story {
-border: 1px solid black;
+
 margin: 5px;
+
 }
 
 .earth-img {
-border: 1px solid black;
+
 margin: 5px;
 background-image: url("./images/img-story-2.png");
 font-family: Georgia;
@@ -111,7 +137,7 @@ color: white;
 }
 
 .cameras-img {
-  border: 1px solid black;
+
   margin: 5px;
   background-image: url("./images/img-story-3.png");
   font-family: Georgia;
@@ -122,13 +148,13 @@ color: white;
 
 .column-medium {
 width: 300px;
-border: 3px solid black;
+
 margin-right: 10px;
 padding: 10px;
 }
 
 .cats-img {
-  border: 1px solid black;
+
   margin: 5px;
   background-image: url("./images/img-story-1.png");
   font-family: Georgia;
@@ -139,29 +165,67 @@ color: white;
 
 .column-small {
 width: 240px;
-border: 3px solid black;
+
 padding: 10px;
+flex-direction: column;
 }
 
-.cookie-img {
+.cookie-img img {
   border: 1px solid black;
-  width: 240px;
-
+  height: 240px;
 }
 
-.cookie {
 
-}
 
-.news-bites {
-  border: 2px solid black;
-  margin: 5px;
+.news-bites h3 {
+  margin-bottom: 41px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .bite {
-
+  margin: 0;
+  background-color: WhiteSmoke;
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+  color: DimGray;
+  border-bottom: 1px solid black;
+  display: block;
+  padding: 11px 20px;
 }
 
-.info {
+.news-bites h3 {
+  margin-bottom: 41px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
 
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  background-color: mediumaquamarine;
+  margin: auto;
+  font-family: "Verdana", sans-serif;
+  font-size: 12px;
+}
+
+footer .title {
+  display: inline-block;
+  padding-right: 25px;
+border-right: 2px solid white;
+  font-family: "Georgia", serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
+footer nav {
+  display: inline-block;
+  padding-left: 25px;
 }
